OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Configuration_Group_Mapping__c/fields/ECC_Field_Configuration_Group__c.field-meta.xml
<CustomField>
    <fullName>ECC_Field_Configuration_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ECC Field Configuration Group</label>
    <referenceTo>ECC_Field_Configuration_Group__c</referenceTo>
    <relationshipLabel>ECC Field Configuration Group Mappings</relationshipLabel>
    <relationshipName>ECC_Field_Configuration_Group_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>