OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Configuration_Group_Mapping__c/fields/Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor Program</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipLabel>ECC Field Configuration Group Mappings</relationshipLabel>
    <relationshipName>ECC_Field_Configuration_Group_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>