OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Configuration_Group_Mapping__c/fields/Vendor_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Name__c</fullName>
    <description>Short Description for Easy Identification</description>
    <formula>Vendor_Program__r.Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Program Name</label>
    <type>Text</type>
</CustomField>