OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Configuration_Group_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Program__c</columns>
    <columns>ECC_Field_Configuration_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>